logs/scraper_20250810_224052.log
Executando livelo_scraper.py...
Saída de livelo_scraper.py:
=== LIVELO SCRAPER ===
Iniciando navegador...
✓ Navegador iniciado
Acessando site da Livelo...
✓ Site carregado - 279 elementos encontrados
Carregando página completa...
✓ Página carregada completamente
Extraindo dados dos parceiros...
Processando 279 elementos...
○ 1/279: Buser
○ 2/279: Hoteis.com
○ 3/279: Beto Carrero World
○ 4/279: Booking.com
○ 5/279: Buser
○ 6/279: Hoteis.com
○ 7/279: Beto Carrero World
○ 8/279: Booking.com
✓ 9/279: Buser
✓ 10/279: Hoteis.com
✓ 11/279: Beto Carrero World
○ 12/279: Booking.com
✓ 13/279: ABC da Construcao
✓ 14/279: ADCOS
✓ 15/279: AMOBELEZA
✓ 50/279: Buzios Beach Resort
✓ 100/279: Extra
✓ 150/279: Liga Vitória Seguro Auto
✓ 200/279: Pado
✓ 250/279: TIM
✓ 279/279: Época cosmésticos
✓ Extração bruta concluída: 279 elementos processados
Limpando e validando dados...
✓ Filtrados 9 registros com N/A
✓ Removidas 0 duplicatas completas
✓ Resolvidas 3 duplicatas parciais (priorizando oferta 'Sim')
✓ Dataset final: 267 registros válidos
Substituindo dados de 2025-08-10...
✓ Dados salvos: livelo_parceiros.xlsx
✓ Cópia salva: output/livelo_parceiros.xlsx
✓ Navegador encerrado
✓ Processo concluído com sucesso!

Executando livelo_reporter.py...
Saída de livelo_reporter.py:

Erros de livelo_reporter.py:
  File "/home/runner/work/livelo_scraper/livelo_scraper/livelo_reporter.py", line 2249
    window.addEventListener('load', () => {
                                    ^^^^
SyntaxError: f-string: expression cannot contain assignment, perhaps you meant "=="?

Falha no reporter. Saindo.
